<resources>
    <string name="app_name">Rent Bicycle</string>
    <string name="rent">Rent</string>
    <string name="list">List</string>
    <string name="wallet">Wallet</string>
    <string name="add_cash">Add Cash</string>
    <string name="transaction_history">Transaction history</string>
    <string name="back">Back</string>
    <string name="end_the_rent">End the rent</string>
    <string name="bicycle_number">Bicycle number</string>
    <string name="rent_time_start">Rent time start</string>
    <string name="price_for_rent">Price for rent</string>
    <string name="availability">Availability</string>
    <string name="cost_1_hour">Cost / 1 hour</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="sort_by_color">Sort by color</string>
    <string name="sort_by_brand">Sort by brand</string>
    <string name="sort_by_status">Sort by status</string>
    <string name="sort_by_cost">Sort by cost</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="search">Search</string>
    <string name="bicycle_list">Bicycle List</string>
    <string name="rented_bicycles">Rented Bicycles</string>
    <string name="integer_extend">dol</string>
    <string name="rest_extend">cent</string>
    <string name="charge_with">Charge With</string>
    <string name="available">Available</string>
    <string name="occupied">Occupied</string>
    <string name="add">Add</string>
</resources>
